--- a/index.html
+++ b/index.html
@@ -299,6 +299,7 @@
         <script src="js/lib/angular.js"></script>
         <script src="js/lib/angular-resource.min.js"></script>
         <script src="js/lib/angular-route.min.js"></script>
+        <script src="js/lib/nicescroll.min.js"></script>
         <script src="js/lib/geral.js"></script>
         <!--bibliotecas-->
 
