[UP] Ajuste de nome de arquivos

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                                                 <li><a href="#">Como tudo começou</a></li>
                                                 <li><a href="#">Cuidados especiais</a></li>
                                                 <li><a href="#">História do patchwork</a></li>
-                                                <li><a href="#/clientes">Clientes</a></li>
+                                                <li><a href="#/user">Usuários</a></li>
                                                 <li><a href="#/funcionarios">Funcionários</a></li>
                                                 <li><a href="#/transportadoras">Transportadoras</a></li>
 
@@ -337,7 +337,7 @@
         <!--modulos-->
 
         <!--Controllers-->
-        <script src="js/clientesController.js"></script>
+        <script src="js/userController.js"></script>
         <script src="js/loginController.js"></script>
         <!--Controllers-->
         <!--carga de scripts-->
