--- a/index.html
+++ b/index.html
@@ -157,7 +157,12 @@
                                                     <a href="#">
                                                         Porta Trecos
                                                         <div class="thumbnail hidden-xs">
-                                                            <img class="img-responsive" src="img/dropdown_menu/portatrecos.png" width="400" height="400"/>
+
+                                                            <img class="img-responsive"
+                                                                 src="img/dropdown_menu/portatrecos.png"
+                                                                 width="400"
+                                                                 height="400"/>
+
                                                         </div>
                                                     </a>
                                                 </li>
@@ -171,7 +176,9 @@
                                         <!--dropdown institucional-->
                                         <li class="dropdown thumb-dropdown">
 
-                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-road"></i> Institucional<span class="caret"></span></a>
+                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                                <i class="glyphicon glyphicon-road"></i> Institucional<span class="caret"></span>
+                                            </a>
 
                                             <ul class="dropdown-menu" role="menu">
 
@@ -188,11 +195,12 @@
                                         <!--dropdown institucional-->
 
                                         <!--identificação do usuário logado-->
-
-
-                                        <li><a href="#"><i class="glyphicon glyphicon-user" ng-show="user.ds_nome"></i><strong> {{user.ds_nome}}</strong></a></li>
-
-
+                                        <li>
+                                            <a href="#/user/edit">
+                                                <i class="glyphicon glyphicon-user" ng-show="user.ds_nome"></i>
+                                                <strong> {{user.ds_nome}}</strong>
+                                            </a>
+                                        </li>
                                         <!--identificação do usuário logado-->
 
                                         <!--fim botoes navbar-->
