--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                                         <li><a href="#">Como tudo começou</a></li>
                                         <li><a href="#">Cuidados especiais</a></li>
                                         <li><a href="#">História do patchwork</a></li>
-                                        <li><a href="#/user">Usuários</a></li>
+                                        <li><a href="#/user/listUser">Usuários</a></li>
                                         <li><a href="#/funcionarios">Funcionários</a></li>
                                         <li><a href="#/transportadoras">Transportadoras</a></li>
 
@@ -208,7 +208,7 @@
 
                                 <!--Cadastre-se-->
                                 <li ng-show="!user.sq_pessoa">
-                                    <a href="#/user/newCustomer">
+                                    <a href="#/user/addCustomer">
                                         <i class="glyphicon glyphicon-user text-primary"></i>
                                         <strong>Cadastre-se </strong>
                                     </a>
