--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
                                 <!--identificação do usuário logado-->
                                 <li>
                                     <a href="#/customer/upCustomer">
-                                        <i class="glyphicon glyphicon-user" ng-show="user.ds_nome"></i>
-                                        <strong> {{user.ds_nome}}</strong>
+                                        <i class="glyphicon glyphicon-user" ng-show="user.ds_name"></i>
+                                        <strong> {{user.ds_name}}</strong>
                                     </a>
                                 </li>
                                 <!--identificação do usuário logado-->
@@ -207,7 +207,7 @@
                             <ul class="nav navbar-nav navbar-right">
 
                                 <!--Cadastre-se-->
-                                <li ng-show="!user.sq_pessoa">
+                                <li ng-show="!user.sq_person">
                                     <a href="#/customer/addCustomer">
                                         <i class="glyphicon glyphicon-user text-primary"></i>
                                         <strong>Cadastre-se </strong>
@@ -216,7 +216,7 @@
                                 <!--Cadastre-se-->
 
                                 <!--login-->
-                                <li ng-show="!user.sq_pessoa">
+                                <li ng-show="!user.sq_person">
                                     <a href="" data-toggle="modal" data-target="#modalLogin">
                                         <i class="glyphicon glyphicon-log-in text-primary"></i>
                                         <strong>Entrar </strong>
@@ -225,7 +225,7 @@
                                 <!--login-->
 
                                 <!--logout-->
-                                <li ng-show="user.sq_pessoa">
+                                <li ng-show="user.sq_person">
                                     <a href="" data-toggle="modal" data-target="#modalLogoff">
                                         <i class="glyphicon glyphicon-log-out text-danger"></i>
                                         <strong>Sair </strong>
@@ -398,20 +398,20 @@
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <input class="form-control"
                                placeholder="Senha"
-                               id="ds_senha"
-                               name="ds_senha"
+                               id="ds_password"
+                               name="ds_password"
                                type="password"
                                maxlength="20"
                                ng-maxlength="20"
-                               ng-model="row.ds_senha"
+                               ng-model="row.ds_password"
                                required/>
                     </div>
 
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                        <span class="text-white" ng-show="form.ds_senha.$dirty && form.ds_senha.$invalid">
+                        <span class="text-white" ng-show="form.ds_password.$dirty && form.ds_password.$invalid">
                             <i class="glyphicon glyphicon-remove-sign"></i>
-                            <span ng-show="form.ds_senha.$error.required">Campo obrigatório</span>
-                            <span ng-show="form.ds_senha.$error.maxlength">Máximo de vinte caracteres</span>
+                            <span ng-show="form.ds_password.$error.required">Campo obrigatório</span>
+                            <span ng-show="form.ds_password.$error.maxlength">Máximo de vinte caracteres</span>
                         </span>
                     </div>
 
