--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<!--modulo app-->
+<!--module app-->
 <html ng-app="app">
 
     <head>
@@ -10,10 +10,10 @@
         <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
         <title>Fulo</title>
 
-        <!--carga de arquivos css-->
+        <!--load css-->
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/complemento.css" rel="stylesheet">
-        <!--carga de arquivos css-->
+        <!--load css-->
 
     </head>
 
@@ -22,7 +22,7 @@
         <!--container-->
         <div class="container-fluid">
 
-            <!--linha-->
+            <!--row-->
             <div class="row">
 
                 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -30,7 +30,7 @@
                     <!--nav container-->
                     <div class="container-fluid">
 
-                        <!--botao de menu para mobile-->
+                        <!--button of menu for mobile-->
                         <div class="navbar-header">
 
                             <button type="button" class="navbar-toggle" data-toggle="collapse" data-targset="#dropdown-thumbnail-preview" data-target=".navbar-collapse">
@@ -39,20 +39,20 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <!--fim botao de menu para mobile-->
+                            <!--end button of menu for mobile-->
 
                             <a class="navbar-brand hidden-xs"><img src="img/fulo.png" /></a>
                             <a class="navbar-brand hidden-sm hidden-md hidden-lg"><img src="img/fulo.png" /></a>
 
                         </div>
 
-                        <!--colapso-->
+                        <!--colapse-->
                         <div id="navbar" class="navbar-collapse collapse">
 
-                            <!--botoes da esquerda-->
+                            <!--left buttons-->
                             <ul class="nav navbar-nav">
 
-                                <!--botoes navbar-->
+                                <!--buttons navbar-->
                                 <li class="active"><a href="#/"><i class="glyphicon glyphicon-home"></i> Home</a></li>
 
                                 <!--menu dropdown-->
@@ -164,7 +164,7 @@
 
                                     </ul>
                                 </li>
-                                <!--fim dropdown-->
+                                <!--end dropdown-->
 
                                 <li><a href="#/contact"><i class="glyphicon glyphicon-phone-alt"></i> Contato</a></li>
 
@@ -189,31 +189,31 @@
                                 </li>
                                 <!--dropdown institucional-->
 
-                                <!--identificação do usuário logado-->
+                                <!--identifier of logged user-->
                                 <li>
                                     <a href="#/customer/upCustomer">
                                         <i class="glyphicon glyphicon-user" ng-show="user.ds_name"></i>
                                         <strong> {{user.ds_name}}</strong>
                                     </a>
                                 </li>
-                                <!--identificação do usuário logado-->
+                                <!--identifier of logged user-->
 
-                                <!--fim botoes navbar-->
+                                <!--end buttons navbar-->
                             </ul>
 
-                            <!--fim botoes da esquerda-->
+                            <!--end left buttons-->
 
-                            <!--botoes da direita-->
+                            <!--right buttons-->
                             <ul class="nav navbar-nav navbar-right">
 
-                                <!--Cadastre-se-->
+                                <!--sign in-->
                                 <li ng-show="!user.sq_person">
                                     <a href="#/customer/addCustomer">
                                         <i class="glyphicon glyphicon-user text-primary"></i>
                                         <strong>Cadastre-se </strong>
                                     </a>
                                 </li>
-                                <!--Cadastre-se-->
+                                <!--sign in-->
 
                                 <!--login-->
                                 <li ng-show="!user.sq_person">
@@ -234,7 +234,7 @@
                                 <!--logout-->
 
                             </ul>
-                            <!--fim botoes da direita-->
+                            <!--end right buttons-->
 
                             <form class="navbar-form pull-right">
                                 <img src="img/ajax-loader.gif" ng-show="showLoaderFlag" class="pull-right" />
@@ -244,15 +244,15 @@
                         <!--nav container-->
 
                     </div>
-                    <!--colapso-->
+                    <!--colapse-->
 
                 </nav>
                 <!--navbar-->
 
-                <!--conteudo-->
+                <!--content-->
                 <div class="container-fluid">
 
-                    <!--linha-->
+                    <!--row-->
                     <div class="row">
 
                         <!--flashmessage-->
@@ -268,19 +268,19 @@
 
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
-                            <!--conteudo-->
+                            <!--angular content-->
                             <div ng-view></div>
-                            <!--conteudo-->
+                            <!--angular content-->
 
                         </div>
 
-                        <!--rodape-->
+                        <!--footer-->
                         <legend><br /></legend>
 
-                        <!--primeiro bloco-->
+                        <!--first bloc-->
                         <div class="col-xs-12 col-md-6">
 
-                            <!--bloco de endereco-->
+                            <!--bloc of address-->
                             <address>
                                 <h3>Fulô Patchwork</h3>
 
@@ -297,12 +297,12 @@
                                 </div>
 
                             </address>
-                            <!--fim bloco endereco-->
+                            <!--end bloc address-->
 
                         </div>
-                        <!--fim primeiro bloco-->
+                        <!--end first bloc-->
 
-                        <!--botao topo-->
+                        <!--button top-->
                         <div class="col-xs-12">
 
                             <div class="pull-right">
@@ -312,23 +312,23 @@
                             </div>
 
                         </div>
-                        <!--fim botao topo-->
-                        <!--rodape-->
+                        <!--button top-->
+                        <!--footer-->
 
                     </div>
-                    <!--linha-->
+                    <!--row-->
 
                 </div>
-                <!--conteudo-->
+                <!--content-->
 
             </div>
-            <!--linha-->
+            <!--row-->
 
         </div>
         <!--container-->
 
-        <!--carga de scripts-->
-        <!--bibliotecas-->
+        <!--load scripts-->
+        <!--library-->
         <script src="js/lib/jquery-1.11.2.min.js"></script>
         <script src="js/lib/bootstrap.min.js"></script>
         <script src="js/lib/angular.js"></script>
@@ -336,25 +336,25 @@
         <script src="js/lib/angular-route.min.js"></script>
         <script src="js/lib/nicescroll.min.js"></script>
         <script src="js/lib/geral.js"></script>
-        <!--bibliotecas-->
+        <!--library-->
 
-        <!--modulos-->
+        <!--modules-->
         <script src="js/app.js"></script>
-        <!--modulos-->
+        <!--modules-->
 
         <!--Controllers-->
         <script src="js/userController.js"></script>
         <script src="js/loginController.js"></script>
         <script src="js/customerController.js"></script>
         <!--Controllers-->
-        <!--carga de scripts-->
+        <!--load scripts-->
 
     </body>
 
     <!--modal login-->
     <div id="modalLogin" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" >
 
-        <!--tamanho e alinhamento-->
+        <!--size and alignment-->
         <div class="col-xs-12 col-sm-5 col-md-4 col-lg-4 col-sm-offset-4">
 
             <legend class="text-white"> <i class="glyphicon glyphicon-log-in text-white"></i> Entrar
@@ -363,10 +363,10 @@
 
             </legend>
 
-            <!--formulario-->
-            <form name="form" class="form-horizontal">
+            <!--form-->
+            <form id="login" name="form" class="form-horizontal">
 
-                <!--campo email-->
+                <!-- field email-->
                 <div class="form-group">
 
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
@@ -384,16 +384,16 @@
                     <div id="div-email" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <span class="text-white" ng-show="form.ds_email.$dirty && form.ds_email.$invalid">
                             <i class="glyphicon glyphicon-remove-sign"></i>
-                            <span ng-show="form.ds_email.$error.required">Campo obrigatório</span>
+                            <span ng-show="form.ds_email.$error.required">campo obrigatório</span>
                             <span ng-show="form.ds_email.$error.email">Email inválido</span>
                             <span ng-show="form.ds_email.$error.maxlength">Máximo de cinquenta caracteres</span>
                         </span>
                     </div>
 
                 </div>
-                <!--fim campo email-->
+                <!-- field email-->
 
-                <!--campo senha-->
+                <!-- field password-->
                 <div class="form-group">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <input class="form-control"
@@ -416,9 +416,9 @@
                     </div>
 
                 </div>
-                <!--fim campo senha-->
+                <!--field password-->
 
-                <!--botao submit-->
+                <!--button submit-->
                 <div class="form-group">
                     <div class="col-sm-12">
 
@@ -428,15 +428,15 @@
 
                     </div>
                 </div>
-                <!--fim botao submit-->
+                <!--button submit-->
 
             </form>
-            <!--fim formulario-->
+            <!--form-->
 
         </div>
 
     </div>
-    <!--fim tamanho e alinhamento-->
+    <!--size and alignment-->
     <!--modal login-->
 
     <!--modal logoff-->
@@ -457,10 +457,10 @@
 
                 <div class="modal-footer">
 
-                    <!--formulario-->
+                    <!--form-->
                     <form class="form-horizontal">
 
-                        <!--botões-->
+                        <!--buttons-->
                         <div class="form-group">
                             <div class="col-sm-12">
 
@@ -474,10 +474,10 @@
 
                             </div>
                         </div>
-                        <!--botões-->
+                        <!--buttons-->
 
                     </form>
-                    <!--fim formulario-->
+                    <!--form-->
 
                 </div>
 
