--- a/index.html
+++ b/index.html
@@ -345,23 +345,23 @@
 
         <!--load scripts-->
         <!--library-->
-        <script src="js/lib/jquery-1.11.2.min.js"></script>
-        <script src="js/lib/bootstrap.min.js"></script>
-        <script src="js/lib/angular.js"></script>
-        <script src="js/lib/angular-resource.min.js"></script>
-        <script src="js/lib/angular-route.min.js"></script>
-        <script src="js/lib/nicescroll.min.js"></script>
-        <script src="js/lib/geral.js"></script>
+        <script src="app/component/jquery-1.11.2.min.js"></script>
+        <script src="app/component/bootstrap.min.js"></script>
+        <script src="app/component/angular.js"></script>
+        <script src="app/component/angular-resource.min.js"></script>
+        <script src="app/component/angular-route.min.js"></script>
+        <script src="app/component/nicescroll.min.js"></script>
+        <script src="app/component/geral.js"></script>
         <!--library-->
 
         <!--modules-->
-        <script src="js/app.js"></script>
+        <script src="app/controller/app.js"></script>
         <!--modules-->
 
         <!--Controllers-->
-        <script src="js/userController.js"></script>
-        <script src="js/loginController.js"></script>
-        <script src="js/customerController.js"></script>
+        <script src="app/controller/userController.js"></script>
+        <script src="app/controller/loginController.js"></script>
+        <script src="app/controller/customerController.js"></script>
         <!--Controllers-->
         <!--load scripts-->
 
