--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
                                     <ul class="dropdown-menu" role="menu">
 
-                                        <li><a href="#/user/listProduct">Produtos</a></li>
+                                        <li><a href="#/product/listProduct">Produtos</a></li>
                                         <li><a href="#/user/listUser">Usuários</a></li>
 
                                     </ul>
@@ -346,12 +346,12 @@
         <!--load scripts-->
         <!--library-->
         <script src="app/component/jquery-1.11.2.min.js"></script>
-        <script src="app/component/bootstrap.min.js"></script>
         <script src="app/component/angular.js"></script>
         <script src="app/component/angular-resource.min.js"></script>
         <script src="app/component/angular-route.min.js"></script>
-        <script src="app/component/nicescroll.min.js"></script>
         <script src="app/component/geral.js"></script>
+        <script src="app/component/bootstrap.min.js"></script>
+        <script src="app/component/nicescroll.min.js"></script>
         <!--library-->
 
         <!--modules-->
@@ -360,8 +360,9 @@
 
         <!--Controllers-->
         <script src="app/controller/userController.js"></script>
-        <script src="app/controller/loginController.js"></script>
+        <script src="app/controller/loginController.js"></script>   
         <script src="app/controller/customerController.js"></script>
+        <script src="app/controller/productController.js"></script>
         <!--Controllers-->
         <!--load scripts-->
 
@@ -387,10 +388,9 @@
 
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
-                        <input type="email"
+                        <input class="form-control input-sm text-lowercase"
+                               type="email"
                                name="ds_email"
-                               class="form-control
-                               text-lowercase"
                                placeholder="usuario@email.com"
                                ng-model="row.ds_email"
                                maxlength="50"
@@ -420,7 +420,7 @@
 
                         <div class="input-group">
 
-                            <input class="form-control password"
+                            <input class="form-control input-sm password"
                                    placeholder="Senha"
                                    id="ds_password"
                                    name="ds_password"
@@ -431,7 +431,7 @@
                                    required/>
 
                             <span class="input-group-btn">
-                                <button class="btn btn-default" ng-click="showhidePass()">
+                                <button class="btn btn-default btn-sm" ng-click="showhidePass()">
                                     <i id="switchPass" class="glyphicon glyphicon-eye-close"></i>
                                 </button>
                             </span>
