[ADD] cart and wishlist.

--- a/index.html
+++ b/index.html
@@ -249,6 +249,22 @@
                                 </li>
                                 <!--logout-->
 
+                                <!--cart-->
+                                <li data-toggle="tooltip" data-placement="left" title="Carrinho de compras">
+                                    <a href="#/product/cart">
+                                        <i class="glyphicon glyphicon-shopping-cart btn-success badge">20</i>
+                                    </a>
+                                </li>
+                                <!--cart-->
+
+                                <!--wishlist-->
+                                <li data-toggle="tooltip" data-placement="left" title="Lista de desejos">
+                                    <a href="#/product/wishList">
+                                        <i class="glyphicon glyphicon-heart text-danger badge btn-danger">10</i>
+                                    </a>
+                                </li>
+                                <!--wishlist-->
+
                             </ul>
                             <!--end right buttons-->
 
